# tac-9

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
agents/: __init__.py  base.py
agents/architecture/: __init__.py  database_architect.py  security_architect.py  solutions_architect.py
agents/deployment/: __init__.py  devops_engineer.py  technical_writer.py
agents/implementation/: __init__.py  backend_engineer.py  database_engineer.py  frontend_engineer.py
agents/product/: __init__.py  business_analyst.py  product_manager.py  ux_researcher.py
agents/review/: __init__.py  code_reviewer.py  performance_engineer.py  security_engineer.py
agents/testing/: __init__.py  db_test_engineer.py  e2e_test_engineer.py  qa_engineer.py
docs/: ARCHITECTURE.md  QUICK_START.md
examples/01-team-activity-log/: README.md
examples/02-advanced-analytics/: README.md
examples/03-file-uploads/: README.md
orchestrator/: __init__.py  cli.py  main.py
orchestrator/core/: __init__.py  config.py  models.py  orchestrator.py
orchestrator/services/: __init__.py  agent_registry.py  llm_service.py
scripts/: init_project.sh
templates/backend/: schema.ts.j2  server-actions.ts.j2
templates/database/: migration.sql.j2
templates/frontend/: component.tsx.j2  form.tsx.j2
templates/tests/: e2e.spec.ts.j2
tests/: __init__.py  test_orchestrator.py
workflows/: full-sdlc.yaml  implementation-only.yaml  testing-only.yaml
